--- a/src/ui/finish.ui
+++ b/src/ui/finish.ui
@@ -16,22 +16,10 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">The installation of the dotfiles is complete. It is recommended to restart the computer.</property>
+        <property name="label">The installation of the dotfiles is complete. It is recommended to reboot your system.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkButton" id="reboot_system">
-        <property name="name">regular</property>
-        <property name="label" translatable="yes">Reboot Now</property>
-        <property name="margin-end">300</property>
-        <property name="margin-start">300</property>
-        <property name="action-name">win.reboot_system</property>
-        <style>
-          <class name="suggested-action"/>
-        </style>
       </object>
     </child>
   </template>
