--- a/src/ui/addproject.ui
+++ b/src/ui/addproject.ui
@@ -24,7 +24,7 @@
             </child>
             <child type="end">
               <object class="GtkButton" id="add_button">
-                <property name="label">Save As</property>
+                <property name="label">Select Project Folder</property>
                 <property name="action-name">dialog.add-project</property>
                 <property name="css-classes">suggested-action</property>
               </object>
@@ -43,6 +43,18 @@
 
             <child>
               <object class="AdwPreferencesGroup">
+                <property name="title">Your Project ID</property>
+                <property name="description">Please enter a valid project ID (e.g., com.yourname.dotfilesname without spaces).</property>
+                <child>
+                  <object class="AdwEntryRow" id="project_id_entry">
+                    <property name="title">Project ID</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+
+            <child>
+              <object class="AdwPreferencesGroup">
                 <property name="title">Project Details</property>
                 <property name="description">Enter the details for your new project to save it as .dotinst in your corresponding project folder.</property>
                 <child>
@@ -51,18 +63,8 @@
                   </object>
                 </child>
                 <child>
-                  <object class="AdwEntryRow" id="project_id_entry">
-                    <property name="title">ID</property>
-                  </object>
-                </child>
-                <child>
                   <object class="AdwEntryRow" id="project_description_entry">
                     <property name="title">Description</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="project_version_entry">
-                    <property name="title">Version</property>
                   </object>
                 </child>
                 <child>
@@ -70,24 +72,6 @@
                     <property name="title">Author</property>
                   </object>
                 </child>
-                <child>
-                  <object class="AdwEntryRow" id="project_source_entry">
-                    <property name="title">Source</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="project_subfolder_entry">
-                    <property name="title">Subfolder</property>
-                  </object>
-                </child>
-                <!--
-                <child>
-                  <object class="AdwEntryRow" id="project_path_entry">
-                    <property name="title">Project Path</property>
-                    <property name="input-purpose">url</property>
-                  </object>
-                </child>
-                -->
               </object>
             </child>
           </object>
