--- a/src/ui/loadconfiguration.ui
+++ b/src/ui/loadconfiguration.ui
@@ -32,7 +32,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system.</property>
+        <property name="label">Easily install custom dotfiles and configurations on your system.</property>
         <property name="margin-bottom">30</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
@@ -61,8 +61,8 @@
 
         <child>
           <object class="AdwPreferencesGroup" id="active_dotfiles_header">
-            <property name="title">Active Dotfiles</property>
-            <property name="description" translatable="yes">The following dotfiles are activated on your system.</property>
+            <property name="title">Activated Dotfiles</property>
+            <property name="description" translatable="yes">The following dotfiles are enabled on your system.</property>
             <property name="visible">false</property>
             <child type="header-suffix">
               <object class="GtkButton" id="btn_refresh_dotfiles">
@@ -90,7 +90,7 @@
         <child>
           <object class="AdwPreferencesGroup" id="installed_dotfiles_header">
             <property name="title">Installed Dotfiles</property>
-            <property name="description" translatable="yes">The following dotfiles are already installed on your system.</property>
+            <property name="description" translatable="yes">The following dotfiles are already installed on your system and can be activated.</property>
             <property name="visible">false</property>
           </object>
         </child>
