--- a/src/ui/protect.ui
+++ b/src/ui/protect.ui
@@ -7,7 +7,7 @@
     <property name="spacing">10</property>
     <child>
       <object class="GtkLabel">
-        <property name="label">Protect your Custom Configuration</property>
+        <property name="label">Protect your Customizations</property>
         <style>
           <class name="title-1"/>
         </style>
