--- a/src/ui/restore.ui
+++ b/src/ui/restore.ui
@@ -7,7 +7,7 @@
     <property name="spacing">10</property>
     <child>
       <object class="GtkLabel">
-        <property name="label">Restore</property>
+        <property name="label">Restore Settings</property>
         <style>
           <class name="title-1"/>
         </style>
@@ -16,7 +16,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Selected settings from the current installation of the dotfiles can be transferred to the new installation.</property>
+        <property name="label">Selected settings from the current installation of dotfiles can be transferred to the new installation.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
